# backtester

./: .env  .gitignore  Cargo.toml
data/: data.json  meta.json
examples/: polygon.rs  random_trades.rs
examples/polygon/: Cargo.toml
examples/polygon/src/: main.rs
src/: account.rs  brokerage.rs  clock.rs  commission.rs  data.rs  lib.rs  market.rs  options.rs  order.rs  position.rs  prelude.rs  simulator.rs  slippage.rs  statistics.rs  strategy.rs
src/brokerage/: account.rs  actor.rs  brokerage.rs  handle.rs  mod.rs  order.rs  position.rs
src/data/: cache.rs  error.rs  mod.rs
src/data/downloader/: mod.rs  polygon.rs
src/data/provider/: mod.rs  polygon.rs
src/finance/: commission.rs  mod.rs  slippage.rs
src/markets/: actor.rs  cache.rs  clock.rs  data.rs  data_manager.rs  handle.rs  market.rs  mod.rs
src/utils/: mod.rs  nyse_calendar.rs  progress.rs  serde_tz.rs
