[package]
name = "backtester"
version = "0.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2.14"
rust_decimal = "1.16.0"
#polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.13.0", default-features = false, features = ["rest"], optional = false }
polygon = { path = "../polygon", default-features = false, features = ["rest"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["v4"] }
futures = "0.3.17"
stream-flatten-iters = "0.2.0"
chrono-tz = "0.6.0"

[features]
default = []

[[example]]
name = "polygon"
required-features = ["polygon"]

[dev-dependencies]
anyhow = "1.0.44"
chrono = "0.4"
dotenv = "0.15.0"
rand = "0.8.4"
rust_decimal = "1.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
