[package]
name = "backtester"
version = "0.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bdays = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
csv = "1.1.6"
futures = { version = "0.3"}
indicatif = "0.16"
itertools = "0.10.3"
lazy_static = "1.4"
num-traits = "0.2"
rust_decimal = "1.16"
#polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.13.0", default-features = false, features = ["rest"], optional = false }
polygon = { path = "../polygon", default-features = false, features = ["rest"], optional = true }
priority-queue = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.11", features = ["chrono"] }
stream-flatten-iters = { version = "0.2", optional = true }
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1.29"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1.0.73"

[features]
default = []
polygon-downloader = ["polygon", "stream-flatten-iters"]

[[example]]
name = "polygon"
required-features = ["polygon-downloader"]

[dev-dependencies]
anyhow = "1.0"
dotenv = "0.15"
rand = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
